--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
+        "dotenv": "^8.0.0",
         "express": "~4.16.1",
+        "mongoose": "^5.6.4",
         "morgan": "~1.9.1"
     }
 }
